--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - mkdir build
   - cd build
   - cmake -DCMAKE_INSTALL_PREFIX=~/opencv ../
-  - make
+  - make -j25
   - make install
 
 before_script:
@@ -20,7 +20,7 @@ before_script:
    - cd build
    - cmake -DGTS_TESTS=ON -DCMAKE_BUILD_TYPE=Release -DOpenCV_ROOT_DIR=~/opencv ../
 
-script: make
+script: make -j25
 
 notifications:
   email:
