--- a/.travis.yml
+++ b/.travis.yml
@@ -4,30 +4,29 @@ compiler: gcc
 
 env:
   - OPTIONS="-DGTS_TESTS=ON -DCMAKE_BUILD_TYPE=Release -DOpenCV_ROOT_DIR=~/opencv"
-  
 
-before_install:
-  - cd
-  - sudo apt-get update -qq > /dev/null
-  - sudo apt-get install -qq cmake qt4-dev-tools
-  - sudo apt-get install -qq libunicap2-dev
+install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq cmake qt4-dev-tools libunicap2-dev
   - git clone https://github.com/Itseez/opencv.git opencv
   - cd opencv
   - git checkout 2.4.5
   - mkdir build
   - cd build
   - cmake -DCMAKE_INSTALL_PREFIX=~/opencv ../
-  - make -j25
+  - make -j 25
   - make install
 
 script:
   - cd ~/dysonltd/gts
   - mkdir build && cd build
   - cmake -DCMAKE_INSTALL_PREFIX=../_install $OPTIONS ../
-  - make -j25
+  - make -j 25
 
 # Run Tests
 after_success:
+  - ./build/bin/gts_tests
+
 branches:
  only:
    - master
