--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,11 @@ before_install:
   - cmake -DCMAKE_INSTALL_PREFIX=~/opencv ../
   - make -j25
   - make install
-
-script:
+  - cd && cd dysonltd/gts
   - mkdir build && cd build
   - cmake -DCMAKE_INSTALL_PREFIX=../_install GTS_OPTIONS ../
+  
+script:
   - make -j25
 
 branches:
