--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ before_install:
   - make install
 
 before_script:
+  - pwd
   - mkdir build && cd build
   - cmake -DCMAKE_INSTALL_PREFIX=../_install GTS_OPTIONS ../
   
