--- a/.travis.yml
+++ b/.travis.yml
@@ -3,28 +3,18 @@ language: cpp
 compiler: gcc
 
 env:
-  - GTS_OPTIONS="-DGTS_TESTS=ON -DCMAKE_BUILD_TYPE=Release -DOpenCV_ROOT_DIR=~/opencv"
+  - GTS_OPTIONS="-DGTS_TESTS=ON -DCMAKE_BUILD_TYPE=Release"
   
 before_install:
   - sudo apt-get update -qq > /dev/null
-  - sudo apt-get install -qq cmake qt4-dev-tools
-  - sudo apt-get install -qq libunicap2-dev
-  - git clone https://github.com/Itseez/opencv.git opencv
-  - cd opencv
-  - git checkout 2.4.5
-  - mkdir build
-  - cd build
-  - cmake -DCMAKE_INSTALL_PREFIX=~/opencv ../
-  - make -j25
-  - make install
-
-before_script:
-  - pwd
-  - mkdir build && cd build
-  - cmake -DCMAKE_INSTALL_PREFIX=../_install GTS_OPTIONS ../
+  - sudo apt-get install -qq cmake qt4-dev-tools > /dev/null
+  - sudo apt-get install -qq libunicap2-dev opencv > /dev/null
   
 script:
-  - make -j25
+  - mkdir build
+  - cd build
+  - cmake -DCMAKE_INSTALL_PREFIX=../install $OPTIONS ../
+  - cmake --build . --target install
 
 branches:
   only:
