--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,20 @@ language: cpp
 compiler: gcc
 
 env:
-  - GTS_OPTIONS="-DGTS_TESTS=ON -DCMAKE_BUILD_TYPE=Release"
+  - GTS_OPTIONS="-DGTS_TESTS=ON -DCMAKE_BUILD_TYPE=Release -DOpenCV_ROOT_DIR=/~/opencv/"
   
 before_install:
   - sudo apt-get update -qq > /dev/null
   - sudo apt-get install -qq cmake qt4-dev-tools > /dev/null
   - sudo apt-get install -qq libunicap2-dev libopencv-dev > /dev/null
+  - git clone https://github.com/Itseez/opencv.git opencv
+  - cd opencv
+  - git checkout 2.4.5
+  - mkdir build
+  - cd build
+  - cmake -DCMAKE_INSTALL_PREFIX=~/opencv ../
+  - make -j25
+  - make install
   
 script:
   - mkdir build
