--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
 before_install:
   - sudo apt-get update -qq > /dev/null
   - sudo apt-get install -qq cmake qt4-dev-tools > /dev/null
-  - sudo apt-get install -qq libunicap2-dev libopencv-dev > /dev/null
+  - sudo apt-get install -qq libunicap2-dev > /dev/null
   - git clone https://github.com/Itseez/opencv.git opencv
   - cd opencv
   - git checkout 2.4.5
@@ -17,6 +17,7 @@ before_install:
   - cmake -DCMAKE_INSTALL_PREFIX=~/opencv ../
   - make -j25
   - make install
+  - cd
   
 script:
   - mkdir build
