--- a/.travis.yml
+++ b/.travis.yml
@@ -6,25 +6,26 @@ env:
   - GTS_OPTIONS="-DGTS_TESTS=ON -DCMAKE_BUILD_TYPE=Release -DOpenCV_ROOT_DIR=~/opencv_install/"
   
 before_install:
+  - pwd
   - sudo apt-get update -qq > /dev/null
   - sudo apt-get install -qq cmake qt4-dev-tools > /dev/null
   - sudo apt-get install -qq libunicap2-dev > /dev/null
   - git clone https://github.com/Itseez/opencv.git ~/opencv
   - cd ~/opencv
   - git checkout 2.4.5
-  - mkdir build
-  - cd build
+  - mkdir ~/opencv/build
+  - cd ~/opencv/build
   - cmake -DCMAKE_INSTALL_PREFIX=~/opencv_install/ ../
   - make -j25
   - make install
   - pwd
-  - cd /home/travis/build/dysonltd/gts
+  - cd /home/travis/dysonltd/gts
   
 script:
   - pwd
   - mkdir build
   - cd build
-  - cmake -DCMAKE_INSTALL_PREFIX=../install $OPTIONS ../
+  - cmake $OPTIONS ../
   - cmake --build .
   
 # run unit tests
