--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,9 @@ language: cpp
 compiler: gcc
 
 env:
-  - GTS_OPTIONS="-DGTS_TESTS=ON -DCMAKE_BUILD_TYPE=Release -DOpenCV_ROOT_DIR=~/opencv_install/"
+  - GTS_OPTIONS="-DOpenCV_ROOT_DIR=~/opencv_install/ -DGTS_TESTS=ON -DCMAKE_BUILD_TYPE=Release"
   
 before_install:
-  - pwd
   - sudo apt-get update -qq > /dev/null
   - sudo apt-get install -qq cmake qt4-dev-tools > /dev/null
   - sudo apt-get install -qq libunicap2-dev > /dev/null
@@ -18,11 +17,11 @@ before_install:
   - cmake -DCMAKE_INSTALL_PREFIX=~/opencv_install/ ../
   - make -j25
   - make install
-  - pwd
+  - cd ~/opencv_install/
+  - ls -alh
   - cd /home/travis/build/dysonltd/gts
   
 script:
-  - pwd
   - mkdir build
   - cd build
   - cmake $OPTIONS ../
