--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
   - mkdir build
   - cd build
   - cmake -DGTS_TESTS=ON ../
-  - make -j25
+  - cmake . --build
   
 # run unit tests
 after_script:
