Removed spurious ... in comments. Re-added asserts but commented out for now

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -161,7 +161,7 @@ endif()
 
 # GNUCXX for MinGW or UNIX
 if(CMAKE_COMPILER_IS_GNUCXX)
-    message(STATUS "GCC detected - Setting compiler flags...")
+    message(STATUS "GCC detected - Setting compiler flags")
     if(MINGW)
         set(CMAKE_CXX_FLAGS "-ggdb -Wextra -Wall -Wno-ignored-qualifiers -pedantic -std=gnu++0x")
 	else()
