CMake fixes to compile on VS2010

--- a/app/lib/log4qt/CMakeLists.txt
+++ b/app/lib/log4qt/CMakeLists.txt
@@ -151,6 +151,6 @@ QT4_WRAP_CPP(MOCS ${MOCHEADERS})
 
 set(LIBRARY_TARGET Log4Qt)
 
-add_library(${LIBRARY_TARGET} ${SOURCES} ${MOCS} ${INCLUDES})
+add_library(${LIBRARY_TARGET} STATIC ${SOURCES} ${MOCS} ${INCLUDES})
 
 target_link_libraries(${LIBRARY_TARGET} ${QT_LIBRARIES})
